[package]
name = "pwny-express"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = {version = "4", features = ["openssl"]}
aes = "0.8"
bcrypt = "0.13"
diesel = {version = "2.0.0", features = ["sqlite", "r2d2"]}
dotenvy = "0.15"
openssl = "0.10"
serde = {version = "1", features = ["derive"]}